# python-project-83

./: Makefile  README.md  build.sh  database.sql  pyproject.toml
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
page_analyzer/: app.py  db.py
page_analyzer/templates/: index.html  url.html  urls.html
