[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer project"
authors = [
  { name = "trun", email = "e.s.trunov@gmail.com" }
]
readme = "README.md"

[tool.poetry]
packages = [
  { include = "page_analyzer" }
]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
validators = "^0.21.1"
requests = "^2.32.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-flask = "^1.3.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

